<resources>
    <string name="app_name">NoteSpace</string>

    <!--    main_activity-->
    <string name="serach_your_notes">Search your notes</string>
    <string name="start">start</string>
    <string name="close">close</string>

    <!--    drawer_menu-->
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="create_new_label">Create New Label</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help and Feedback</string>

    <!--    add_on_menu-->
    <string name="take_photo">Take photo</string>
    <string name="add_image">Add image</string>
    <string name="drawing">Drawing</string>
    <string name="recording">Recording</string>
    <string name="checkboxes">Checkboxes</string>

    <!--    menu_list-->
    <string name="delete">Delete</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="send">Send</string>
    <string name="collaborator">Collaborator</string>
    <string name="labels">Labels</string>

    <!--    gallery_dialog_box-->
    <string name="choose_image">Choose image</string>

    <!--    remind_me_later_menu-->
    <string name="remind_me_later">Remind me later</string>
    <string name="saved_in_google">Saved in Google Reminders</string>
    <string name="tomorrow_morning">Tomorrow morning</string>
    <string name="tomorrow_evening">Tomorrow evening</string>
    <string name="tuesday_morning">Tuesday morning</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="pick_date_time">Pick a date and time</string>
    <string name="pick_place">Pick a place</string>
    <string name="later_today">Later Today</string>

    <!--    dashboard_fragment-->
    <string name="empty_notes_note">Notes you add appear here</string>
    <string name="empty_reminder_note">Notes with upcoming reminders appear here</string>
    <string name="empty_archive_note">Your archive notes appear here</string>
    <string name="empty_trash_note">No notes in Trash</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    search_fragment-->
    <string name="search_your_notes">Search your notes</string>
    <string name="things">Things</string>
    <string name="Colors">Colors</string>

    <!--    settings_fragment-->
    <string name="display_options">Display options</string>
    <string name="add_new_items">Add new items to bottom</string>
    <string name="move_checked_items">Move checked items to bottom</string>
    <string name="display_rich_link">Display rich link previews</string>
    <string name="theme">Theme</string>
    <string name="reminder_defaults">Reminder defaults</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="sharing">Sharing</string>
    <string name="enable_sharing">Enable sharing</string>
    <string name="morning_time">8:00 AM</string>
    <string name="afternoon_time">1:00 PM</string>
    <string name="evening_time">6:00 PM</string>
    <string name="system_default">System default</string>

    <!--    choose_theme_dialog_box-->
    <string name="choose_theme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="to_change_the_theme">To change the theme of your keep widget and notifications, manage your Android <font color="#3F51B5"><u>screen and display settings.</u></font></string>
    <string name="cancel"><font color="#3F51B5">Cancel</font></string>

    <!--    add_reminder_dialog_box-->
    <string name="add_reminder">Add reminder</string>
    <string name="time">Time</string>
    <string name="time_blue"><font color="#3F51B5">Time</font></string>
    <string name="place">Place</string>
    <string name="place_blue"><font color="#3F51B5">Place</font></string>
    <string name="save">Save</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_monday">Next Monday</string>
    <string name="pick_a_date">Pick a date...</string>
    <string name="night">Night</string>
    <string name="pick_a_time">Pick a time...</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="custom">Costum</string>
    <string name="edit_location">Edit location</string>
    <string name="edit_reminder">Edit reminder</string>
    <string name="time_passed">The time has passed</string>


    <!--    <string name="title_activity_dashboard_activtiy">DashboardActivtiy</string>-->
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->

    <!--    toast_string-->
    <string name="note_discarded">Note discarded</string>

    <!--    does_not_repeat_menu-->
    <string name="custom_pick">Custom...</string>
    <string name="repeats_daily">Repeats daily</string>
    <string name="repeats_weekly">Repeats weekly</string>
    <string name="repeats_monthly">Repeats monthly</string>
    <string name="repeats_yearly">Repeats yearly</string>


<!--    delete_dialog_box-->
    <string name="delete_image_text">Do you want to delete this image?</string>
    <string name="cancel_blue_underline"><font color="#3F51B5"><u>Cancel</u></font></string>
    <string name="delete_red"><font color="#FFF44336"><u>Delete</u></font></string>

</resources>