<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notes"
        android:icon="@drawable/bulb_asset"
        android:title="@string/notes" />

    <item
        android:id="@+id/reminders"
        android:icon="@drawable/reminder_asset"
        android:title="@string/reminders" />

    <item
        android:id="@+id/create_new_label"
        android:icon="@drawable/create_new_label_asset"
        android:title="@string/create_new_label" />

    <item
        android:id="@+id/archive"
        android:icon="@drawable/archive_asset"
        android:title="@string/archive" />

    <item
        android:id="@+id/trash"
        android:icon="@drawable/trash_asset"
        android:title="@string/trash" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_asset"
        android:title="@string/settings" />

    <item
        android:id="@+id/help_feedback"
        android:icon="@drawable/help_feedback_asset"
        android:title="@string/help_feedback" />

</menu>