<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include_settings_toolbar"
            layout="@layout/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="7dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/display_options"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/add_new_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_new_items_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/add_new_items"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/add_new_items_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:layout_marginRight="20dp"
                android:paddingTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/move_checked_items_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/move_checked_items_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/move_checked_items"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/move_checked_items_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:layout_marginRight="20dp"
                android:paddingTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/display_rich_link_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/display_rich_link_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/display_rich_link"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/display_rich_link_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:layout_marginRight="20dp"
                android:paddingTop="6dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/theme_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/theme_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/theme"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/system_default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/system_default"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/reminder_defaults_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:text="@string/reminder_defaults"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/morning_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/morning_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/morning"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/morning_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/morning_time"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/afternoon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/afternoon_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/afternoon"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/afternoon_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/afternoon_time"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/evening_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/evening_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/evening"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/evening_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/evening_time"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sharing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sharing"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/enable_sharing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/enable_sharing_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/enable_sharing"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/enable_sharing_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:layout_marginRight="20dp"
                android:paddingTop="6dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>