<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:id="@+id/theme_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_theme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_theme"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />

            <RadioGroup
                android:id="@+id/theme_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/choose_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_change_the_theme"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/cancel_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                android:layout_gravity="right"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>